--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "nexmo/client": "^2.0",
+        "nexmo/laravel": "^2.2",
         "spatie/laravel-backup": "^6.7",
         "tymon/jwt-auth": "1.0.*"
     },
